--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.15.2",
     "firebase": "^4.2.0",
     "node-schedule": "^1.2.3",
-    "node-telegram-bot-api": "^0.27.1"
+    "node-telegram-bot-api": "^0.27.1",
+    "pdf-thumbnail": "^1.0.4"
   },
   "devDependencies": {
     "@types/firebase": "^2.4.31",
