--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "ejs": "2.5.6",
     "express": "^4.15.2",
     "firebase": "^4.2.0",
+    "html-pdf": "^2.2.0",
     "node-schedule": "^1.2.3",
-    "node-telegram-bot-api": "^0.27.1",
-    "pdf-thumbnail": "^1.0.4"
+    "node-telegram-bot-api": "^0.27.1"
   },
   "devDependencies": {
     "@types/firebase": "^2.4.31",
