--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/node-schedule": "^1.2.0",
+    "dateformat": "^3.0.3",
     "ejs": "2.5.6",
     "express": "^4.15.2",
     "firebase": "^4.2.0",
